testsuites/LLT/compiler/Diagnose/lex_test/lex_unterminated_single_line_string/case1.expect.out
error: unterminated single-line string
  ==> case1.cj:14:26:
   | 
14 |     var a = "cangjie ${inter"
   |                      ~~     ^^ unterminated single-line string
   |                      |
   |                      because this interpolation is not terminated with a '}'
   | 
   # note: consider using multi-line string if you intended to include '\n' in string

error: unterminated string interpolation
  ==> case1.cj:16:19:
   | 
16 |     var b = "cangjie ${int""
   |             ~        ^^^^^^^^ unterminated string interpolation
   |             |
   |             because it is in single-line string
   | 

2 errors generated, 2 errors printed.
